# alphafold

./: pyproject.toml  run_alphafold.py  run_alphafold_test.py  setup.py
alphafold/common/: confidence.py  protein.py  protein_test.py  residue_constants.py  residue_constants_test.py
alphafold/data/: feature_processing.py  mmcif_parsing.py  msa_pairing.py  pipeline.py  pipeline_multimer.py  templates.py
alphafold/data/tools/: hhblits.py  hmmbuild.py  hmmsearch.py  jackhmmer.py  kalign.py
alphafold/model/: all_atom.py  all_atom_multimer.py  all_atom_test.py  config.py  data.py  features.py  folding.py  folding_multimer.py  layer_stack_test.py  lddt_test.py  model.py  modules.py  modules_multimer.py  prng_test.py  quat_affine_test.py  r3.py  utils.py
alphafold/model/geometry/: rigid_matrix_vector.py  rotation_matrix.py  test_utils.py  vector.py
alphafold/model/tf/: data_transforms.py  input_pipeline.py  protein_features.py  protein_features_test.py  proteins_dataset.py  shape_helpers_test.py
alphafold/notebooks/: notebook_utils.py  notebook_utils_test.py
alphafold/relax/: amber_minimize.py  amber_minimize_test.py  cleanup_test.py  relax.py  relax_test.py  utils.py  utils_test.py
docker/: run_docker.py
notebooks/: AlphaFold.ipynb
